# NVIDIA_LWIR

./: CMakeLists.txt  CMakeLists_cpp.txt  LWIR_NVIDIAui.py  main.py  main1.py  watergui_main.py
include/: export.h
libiary_update/: CMakeLists.txt  dll_update.cpp  dll_update.h
py_python/: LWIR_NVIDIAui.py  LWIR_NVIDIAui.ui  LWIR_NVIDIAui111.py  LWIR_NVIDIAui111.ui  LWIR_display.py  capture_setting.py  capture_setting.ui  capture_setting111.py  capture_setting111.ui  main.py  main.spec  main1.py  main111.py  main111.spec  main_setting.py  tempCodeRunnerFile.py  watergui_main.py
src/: camera_stream.cpp  camera_stream1.cpp  camera_stream2.cpp
v_linux/: LWIR_NVIDIAui111.py  main.py
v_linux/图标/: pic.qrc
