cmake_minimum_required(VERSION 3.15)
project(UDP)
set(CMAKE_CXX_STANDARD 11)
find_package(OpenCV REQUIRED)
file(GLOB SRC ${CMAKE_CURRENT_SOURCE_DIR}/src/camera_stream1.cpp)
include_directories( ${CMAKE_CURRENT_SOURCE_DIR}/include ${OpenCV_INCLUDE_DIRS} "C:/Program Files (x86)/Eigen3/include/eigen3")
add_executable(main ${SRC})
add_library(udp_dll SHARED ${SRC})
#target_link_libraries(main ${OpenCV_LIBS})
target_link_libraries(udp_dll  ws2_32 ${OpenCV_LIBS})
target_link_libraries(main  ws2_32 ${OpenCV_LIBS})